@@ -1,3 +1,10 @@
+2004-03-22  Pawel Salek
+
+	* libbalsa/Makefile.am: 
+	* src/Makefile.am: build off-the tree.
+	* src/balsa-message.c: mark messages with GPG error with bold, too
+	(Albrecht Dreß).
+
 2004-03-14  Carlos Morgado  <chbm gnome.org>
 
 	* libbalsa/Makefile.am: 
